--- a/2_project/counter/index.html
+++ b/2_project/counter/index.html
@@ -5,8 +5,60 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <style>
+      .header{
+        display: flex;
+        width: 100vw;
+        padding: 0 10px 0 10px;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-top: 0;
+        background-color: rgb(26, 0, 0);
+        height: 10vh;
+
+      }
+      .list{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 60%;
+      }
+      .logo{
+        width: 20%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+      }
+      .buttons{
+        width: 20%;
+      }
+      a{
+        text-decoration: none;
+        padding: 0 10px 0 10px;
+       
+
+      }
+      body{
+        display: flex;
+        flex-wrap: wrap;
+      }
+    </style>
   </head>
   <body>
+    <div class="header">
+      <div class="logo">
+        <h1>logo</h1>
+      </div>
+      <div class="list">
+        <a>Home</a>
+        <a>Products</a>
+        <a>About</a>
+      </div>
+      <div class="buttons">
+        <button>LOGIN</button>
+        <button>SIGNIN</button>
+      </div>
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
